--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -2,28 +2,106 @@
     "cells": [
         {
             "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "# Example usage\n",
                 "\n",
                 "To use `pycounts_eig` in a project:"
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "import pycounts_eig\n",
                 "\n",
                 "print(pycounts_eig.__version__)"
-            ],
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Imports"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
             "outputs": [],
-            "metadata": {}
+            "source": [
+                "from pycounts_eig.pycounts_eig import count_words\n",
+                "from pycounts_eig.plotting import plot_words"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Create a text file\n",
+                "We'll first create a text file to work with to work with using a famous quote from Einstein"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "quote = \"Insanity is doing the same thing over and over and \\\n",
+                "             expecting different results.\"\n",
+                "with open(\"einstein.txt\", \"w\") as file:\n",
+                "        file.write(quote)"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Count words\n",
+                "\n",
+                "We can count the words in our text file using the `count_words()` function. Note that this function removes punctuation and makes all words lowercase before counting"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "counts = count_words(\"einstein.txt\")\n",
+                "print(counts)"
+            ]
+        },
+        {
+            "attachments": {},
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## Plot words\n",
+                "\n",
+                "We can now plot the result using the `plot_words()` function:"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "fig = plot_words(counts, n=5)"
+            ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3",
+            "display_name": "573",
             "language": "python",
             "name": "python3"
         },
@@ -37,7 +115,12 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.5"
+            "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:30:19) [MSC v.1929 64 bit (AMD64)]"
+        },
+        "vscode": {
+            "interpreter": {
+                "hash": "a556218dc916ec8fe5a7425af783d810a50d05b8baa00b29b5da0a475b18c0df"
+            }
         }
     },
     "nbformat": 4,
